# UVSIM

./: .gitignore  README.md  README.txt  UVSim.py  UVSimConsole.py  UVSimGUI.py  main.py  pyproject.toml
UVSim/: ADD.py  BRANCH.py  BRANCHNEG.py  BRANCHZERO.py  DIVIDE.py  HALT.py  MULTIPLY.py  SUBTRACT.py  __init__.py  __main__.py  decode.py  fetch.py  instruction.py  io.py  read_ml.py  util.py  vm.py  vm_operations.py
gui/: __init__.py  cr_widgets.py  file_picker.py  gui.py  gui_ctk.py  io_widgets.py  memory_interface.py  run_interface.py  sim_gui.py
test/: test.py  test2.txt  test3.txt  testMax.txt  testOverflow.txt  test_add.py  test_branch.py  test_branchneg.py  test_branchzero.py  test_decode.py  test_divide.py  test_example.py  test_fetch.py  test_halt.py  test_instruction.py  test_io.py  test_multiply.py  test_nols.txt  test_read_ml.py  test_subtract.py  test_vm.py  test_vm_operations.py
testt/: src.py
