[tool.poetry]
name = "uvsim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
customtkinter = "^5.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
